--- a/index.html
+++ b/index.html
@@ -112,67 +112,67 @@
 
         <div class="cells">
             <div class="cell">
-                <img src="Images/HTML.png" alt="html logo">
+                <img src="images/HTML.png" alt="html logo">
                 <span>HTML</span>
             </div>
 
             <div class="cell">
-                <img src="Images/CSS.png" alt="css logo">
+                <img src="images/CSS.png" alt="css logo">
                 <span>CSS</span>
             </div>
 
             <div class="cell">
-                <img src="Images/Python.png" alt="python logo">
+                <img src="images/Python.png" alt="python logo">
                 <span>Python</span>
             </div>
 
             <div class="cell">
-                <img src="Images/Flask.png" alt="flask logo">
+                <img src="images/Flask.png" alt="flask logo">
                 <span>Flask</span>
             </div>
 
             <div class="cell">
-                <img src="Images/NET.png" alt=".NET logo">
+                <img src="images/NET.png" alt=".NET logo">
                 <span>.NET</span>
             </div>
 
             <div class="cell">
-                <img src="Images/BeautifulSoup.png" alt="beautifulSoup logo">
+                <img src="images/BeautifulSoup.png" alt="beautifulSoup logo">
                 <span>BeautifulSoup</span>
             </div>
 
             <div class="cell">
-                <img src="Images/Csharp.png" alt="c# logo">
+                <img src="images/Csharp.png" alt="c# logo">
                 <span>C#</span>
             </div>
 
             <div class="cell">
-                <img src="Images/Postgresql.png" alt="postgresql logo">
+                <img src="images/Postgresql.png" alt="postgresql logo">
                 <span>Postgresql</span>
             </div>
 
             <div class="cell">
-                <img src="Images/Mysql.png" alt="mysql logo">
+                <img src="images/Mysql.png" alt="mysql logo">
                 <span>MySQL</span>
             </div>
 
             <div class="cell">
-                <img src="Images/Selenium.png" alt="selenium logo">
+                <img src="images/Selenium.png" alt="selenium logo">
                 <span>Selenium</span>
             </div>
 
             <div class="cell">
-                <img src="Images/Java.png" alt="java logo">
+                <img src="images/Java.png" alt="java logo">
                 <span>Java</span>
             </div>
 
             <div class="cell">
-                <img src="Images/Javafx.png" alt="javafx logo">
+                <img src="images/Javafx.png" alt="javafx logo">
                 <span>JavaFX</span>
             </div>
 
             <div class="cell">
-                <img src="Images/SQL Server.png" alt="sql server logo">
+                <img src="images/SQL Server.png" alt="sql server logo">
                 <span>SQL Server</span>
             </div>
 
@@ -188,7 +188,7 @@
   
         <div class="group">
           <div class="person-details">
-            <img src="Images/testimony-headshot.webp">
+            <img src="images/testimony-headshot.webp">
             <p>John Doe</p>
             <p>Lorem ipsum dolor sit.</p>
           </div>
