change profile src

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </div>
 
         <div class="headshot">
-            <img src="https://media.licdn.com/dms/image/v2/D4E03AQEyDy2Vp27Zvw/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1715613581765?e=1758153600&v=beta&t=HWjntubkyUKakb0Eyg37sPu0tAzG2jPvcftD0mNySEg"
+            <img src="https://avatars.githubusercontent.com/u/50922419?v=4"
                 alt="Ahmed Younes headshot">
         </div>
 
